Verif/Test/Invalide/test_erreur_2.17-2.deca
// Description:
//    Programme soulevant l'erreur (2.17)
// Resultats:
//    Erreur contextuelle
//    Ligne 19 : Le type de retour de 'Get' doit être une sous-type de 'int' (règle 2.17)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 19/01/2012

class A {  
   int Get(){
   }
   
}

class B extends A {   
   void Get(){
   } 
}